--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
   <title>Puppy Bowl</title>
   <script src="./index.js" defer></script>
 </head>
-<h1>Puppy Bowl</h1>
+<body>
+  <h1>Puppy Bowl</h1>
 <h3>click on a puppy name for more details</h3>
 <main></main>
 <form action="">
   <label for="">
-    Make Your own Roster.
+    Add to the Roster!
     <input type="text">
     <button type="submit">Add Puppy</button>
   </label>
 </form>
-
-<h2>Your Roster of Puppies!</h2>
 <ol></ol>
-
-<body>
-  
 </body>
 </html>
