you can add a puppy to the website now and everything is working as it should

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <h3>click on a puppy name for more details</h3>
 <main></main>
 <form action="">
-  <label for="">
     Add to the Roster!
-    <input type="text">
-    <button type="submit">Add Puppy</button>
-  </label>
+    <label for="">Name</label><input id="name" type="text"> <br>
+    <label for="">Image Url</label><input id="img" type="text"> <br>
+    <label for="">Breed</label><input id="breed" type="text"> <br>
+    <label for="">Status</label><input id="status" type="text"> <br>
+    <button type="submit" id="add-puppy">Add Puppy</button>
 </form>
 <ol></ol>
 </body>
